SOL-17 : select code flow using args